# jira-ado-traceability

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MIGRATION.md  README.md  SETUP_INSTRUCTIONS.md  config.example.json  justfile  pyproject.toml  requirements.txt  run_traceability_report.bat  run_traceability_robot.bat
.archive/legacy/: jira_ado_traceability_scheduled.py
scripts/: check_line_counts.py  jira_ado_traceability.py  jira_ado_traceability_scheduled.py
skill/: README.md  prompt.md  skill.json  skill.md  traceability_template.py
src/jira_ado_traceability/: __init__.py  ado_client.py  cli_manual.py  cli_scheduled.py  comparator.py  config.py  excel_generator.py  fuzzy_matcher.py  jira_client.py  jira_parser.py  models.py  reporter.py
tests/: __init__.py
tests/unit/: test_ado_client.py  test_comparator.py  test_config.py  test_fuzzy_matcher.py  test_jira_parser.py  test_reporter.py
